# traceml

./: CONTRIBUTING.md  LICENSE  README.md
traceml/: MANIFEST.in  ruff.toml  setup.cfg  setup.py
traceml/requirements/: dev.txt  master.txt  prod.txt  test.txt
traceml/tests/test_events/: test_schemas.py
traceml/tests/test_events_processing/: test_df_processor.py  test_event_recorder.py  test_event_resources.py  test_event_values.py  test_importance.py  test_importance_processors.py  test_units_processors.py
traceml/tests/test_logging/: test_logging_parser.py  test_logs.py
traceml/tests/test_serialization/: test_event_recorder.py
traceml/tests/test_summary/: test_dfsummary.py
traceml/tests/test_tracking/: test_run_tracking.py  test_summaries.py
traceml/traceml/: exceptions.py  logger.py  pkg.py
traceml/traceml/artifacts/: __init__.py  enums.py  kinds.py  schemas.py
traceml/traceml/events/: __init__.py  paths.py  schemas.py
traceml/traceml/integrations/: fastai.py  fastai_v1.py  hugging_face.py  ignite.py  keras.py  langchain.py  lightgbm.py  pytorch_lightning.py  scikit.py  tensorboard.py  tensorflow.py  xgboost.py
traceml/traceml/logging/: __init__.py  handler.py  parser.py  schemas.py  streamer.py
traceml/traceml/processors/: df_processors.py  errors.py  events_processors.py  gpu_processor.py  importance.py  importance_processors.py  logs_processor.py  psutil_processor.py  units_processors.py  writer.py
traceml/traceml/serialization/: __init__.py  base.py  writer.py
traceml/traceml/summary/: df.py
traceml/traceml/tracking/: __init__.py  (+1 more)
(+21 files in other folders)
