[metadata]
description = file: README.md

[tool:pytest]
addopts = --doctest-glob='*.rst'
markers =
    events_mark
    processors_mark
    logging_mark
    serialization_mark
    tracking_mark

[mypy]
python_version = 3.9
namespace_packages = true
ignore_missing_imports = True
show_error_codes = True
allow_redefinition = True
exclude = (setup.py$)|(tests/)|(vendor/)
